# generic-church

./: LICENSE  README.markdown  generic-church.cabal
src/Data/: Church.hs
src/Data/Church/Internal/: FromChurch.hs  TF.hs  ToChurch.hs
test/: FromChurch.hs  Main.hs  ToChurch.hs  Types.hs
