name:                generic-church
version:             0.1.0.0
synopsis:            Automatically convert Generic instances to and from church representations
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
category:            Generics
build-type:          Simple
cabal-version:       >=1.10
library
        hs-source-dirs:      src
        exposed-modules:     Data.Church
        other-modules:       Data.Church.Internal.TF,
                             Data.Church.Internal.ToChurch
  build-depends:       base >=4.6 && <4.7, tagged
  default-language:    Haskell2010
Test-Suite test-generic-church
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base >=4.6 && <4.7,
                      test-framework,
                      test-framework-hunit,
                      generic-church,
                      HUnit
